--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -57,5 +57,5 @@ jobs:
         env:
           DATABASE_URI: "postgresql://postgres:postgres@postgres:5432/testdb"
 
-      - name: Upload code coverage
-        uses: codecov/codecov-action@v2 
+      - name: Codecov
+        uses: codecov/codecov-action@v2.1.0
