--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -58,4 +58,4 @@ jobs:
           DATABASE_URI: "postgresql://postgres:postgres@postgres:5432/testdb"
 
       - name: Upload code coverage
-        uses: SternDevops-Spring22-Inventory/inventory@v2
+        uses: codecov/codecov-action@v2 
