--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ Flask-SQLAlchemy==2.5.1
 psycopg2==2.9.3
 python-dotenv==0.19.2
 
-# Runtime
-gunicorn==20.1.0
-honcho>=1.0.1
+# Runtime dependencies
+Flask==2.0.2
+cloudant==2.15.0
+retry==0.9.2
+python-dotenv==0.19.2
 
 # Code quality
 pylint==2.9.3
