Modified requirements.txt file, added .env file, added environment variable to docker-compose.yml

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       FLASK_APP: service:app
       FLASK_ENV: development
       DATABASE_URI: postgresql://postgres:postgres@postgres:5432/postgres
+      PORT: 8000
     networks:
       - dev
     depends_on:
