--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     #   - 8000:8000
     volumes:
       - ..:/app
+      - ~/.inventory:/home/devops/.inventory/
     command: sleep infinity
     environment:
       FLASK_APP: service:app
@@ -39,3 +40,5 @@ volumes:
 
 networks:
   dev:
+
+  
