--- a/manifest.yml
+++ b/manifest.yml
@@ -3,13 +3,28 @@
 applications:
 - name: nyu-inventory-service-sp2022
   path: .
-  instances: 2
-  memory: 64M
+  instances: 1
+  memory: 128M
   routes:
   - route: nyu-inventory-service-sp2022.us-south.cf.appdomain.cloud
   disk_quota: 1024M
   buildpacks: 
   - python_buildpack
+  timeout: 180
+  services:
+  - ElephantSQL
+  env:
+    FLASK_APP : service:app
+    FLASK_DEBUG : false
+
+- name: nyu-inventory-service-sp2022-prod
+  path: .
+  instances: 1
+  memory: 128M
+  routes:
+  - route: nyu-inventory-service-sp2022-prod.us-south.cf.appdomain.cloud
+  disk_quota: 1024M
+  buildpack: python_buildpack
   timeout: 180
   services:
   - ElephantSQL
