--- a/manifest.yml
+++ b/manifest.yml
@@ -5,8 +5,8 @@ applications:
   path: .
   instances: 1
   memory: 128M
-  routes:
-  - route: nyu-inventory-service-sp2022.us-south.cf.appdomain.cloud
+  hostname: nyu-inventory-service-sp2022
+  domain: us-south.cf.appdomain.cloud
   disk_quota: 1024M
   buildpacks: 
   - python_buildpack
@@ -21,8 +21,8 @@ applications:
   path: .
   instances: 1
   memory: 128M
-  routes:
-  - route: nyu-inventory-service-sp2022-prod.us-south.cf.appdomain.cloud
+  hostname: nyu-inventory-service-sp2022-prod
+  domain: us-south.cf.appdomain.cloud
   disk_quota: 1024M
   buildpack: python_buildpack
   timeout: 180
